# RapidAssist

./: .gitignore  .gitmodules  .travis.yml  CHANGES  CMakeLists.txt  INSTALL.md  README.md  appveyor.yml  version.in
.github/workflows/: build_and_test_windows.yml  build_linux.yml  build_macos.yml  build_windows.yml
ci/appveyor/: before_build.bat  build_client.bat  build_library.bat  build_script.bat  emulate_appveyor.bat  install_googletest.bat  install_sysinternals.ps1  test_script.bat  upload_test_results.bat
ci/github/: build_client.bat  build_client.sh  build_library.bat  build_library.sh  install_sysinternals.bat  install_sysinternals.ps1  makejunitbadge.py  maketestbadge.py  test_script.bat  test_script.sh
ci/linux/: build_all.sh  build_all_debug.sh  build_all_release.sh  build_client.sh  build_debug.sh  build_library.sh  build_release.sh  init.sh  install_googletest.sh  test_script.sh
ci/travis/: build_client.sh  build_library.sh  emulate_travis.sh  install_googletest.sh  test_script.sh
ci/windows/: build_all_debug.bat  build_all_release.bat  build_client.bat  build_library.bat  build_with_defaults_debug.bat  build_with_defaults_release.bat  install_googletest.bat  test_script.bat
client/: CMakeLists.txt  README.md  client.cpp
cmake/: rapidassist-config-version.cmake.in  rapidassist-config.cmake  rapidassist-config.cmake.in
docs/: Doxyfile.in  RapidAssist.xcf
include/rapidassist/: cli.h  code_cpp.h  console.h  cppencoder.h  environment.h  environment_utf8.h  errors.h  errors_utf8.h  filesystem.h  filesystem_utf8.h  generics.h  gtesthelp.h  keystore.h  logger.h  logging.h  macros.h  process.h  process_utf8.h  propertiesfile.h  random.h  strings.h  testing.h  testing_utf8.h  time_.h  timing.h  undef_windows_macros.h  unicode.h  user.h  user_utf8.h  version.h.in
src/rapidassist/: CMakeLists.txt  cli.cpp  code_cpp.cpp  config.h.in  console.cpp  cppencoder.cpp  cppencoder.h  environment.cpp  environment.h  environment_utf8.cpp  environmentfunc.cpp  environmentfunc.h  errors.cpp  errors_utf8.cpp  filesystem.cpp  filesystem.h  filesystem_utf8.cpp  filesystemfunc.cpp  filesystemfunc.h  gtesthelp.cpp  gtesthelper.cpp  gtesthelper.h  keystore.cpp  logger.cpp  logging.cpp  nativefunc.cpp  nativefunc.h  process.cpp  process_utf8.cpp  propertiesfile.cpp  random.cpp  random.h  rastring.cpp  rastring.h  ratime.cpp  ratime.h  string_.cpp  stringfunc.cpp  stringfunc.h  strings.cpp  (+9 more)
src/rapidassist_tests/: CMakeLists.txt  TestFilesystemFunc.cpp  TestGTestHelper.cpp  TestGTestHelper.h  main.cpp
src/rapidassist_unittest/: CMakeLists.txt  TestCli.cpp  TestCli.h  TestDemo.cpp  TestEnvironment.cpp  TestEnvironment.h  TestEnvironmentFunc.cpp  TestEnvironmentFunc.h  TestFilesystem.cpp  TestFilesystem.h  TestFilesystemFunc.cpp  TestFilesystemFunc.h  TestGTestHelp.cpp  TestGTestHelper.cpp  TestGTestHelper.h  TestLogger.cpp  TestLogger.h  TestNativeFunc.cpp  TestNativeFunc.h  TestRandom.cpp  TestRandom.h  TestString.cpp  TestString.h  TestStringFunc.cpp  TestStringFunc.h  TestTime.cpp  TestTime.h  main.cpp
test/: CMakeLists.txt  CommandLineMgr.cpp  CommandLineMgr.h  TestCli.cpp  TestCli.h  TestConsole.cpp  TestConsole.h  TestDemo.cpp  TestDemo.h  TestEnvironment.cpp  TestEnvironment.h  TestEnvironmentUtf8.cpp  TestEnvironmentUtf8.h  TestErrors.cpp  TestErrors.h  TestErrorsUtf8.cpp  TestErrorsUtf8.h  TestFilesystem.cpp  TestFilesystem.h  TestFilesystemUtf8.cpp  TestFilesystemUtf8.h  TestGTestHelp.cpp  TestGTestHelp.h  TestGenerics.cpp  TestGenerics.h  TestLogger.cpp  TestLogger.h  TestLogging.cpp  TestLogging.h  TestProcess.cpp  TestProcess.h  TestProcessUtf8.cpp  TestProcessUtf8.h  TestPropertiesFile.cpp  TestPropertiesFile.h  TestPropertiesFileKeyStore.cpp  TestPropertiesFileKeyStore.h  TestPropertiesFileUtf8.cpp  TestPropertiesFileUtf8.h  TestRandom.cpp  (+20 more)
test/test_files/: TestPropertiesFile.testSave.expected.txt  tests.xml
